# rm-training-2026

./: .gitignore  README.md
W1/cppexamples/: class_example  class_example.cpp  control_flow  control_flow.cpp  dowhile_examples  dowhile_examples.cpp  function_tutorial  function_tutorial.cpp  hello  jump_examples  jump_examples.cpp  loop_examples  loop_examples.cpp  reference_tutorial  reference_tutorial.cpp  stl_tutorial  stl_tutorial.cpp  switch_examples  switch_examples.cpp
W1/greet_project/: CMakeLists.txt
W1/greet_project/include/: greet.h
W1/greet_project/src/: greet.cpp  main.cpp
W1/screenshots/: for-while循环练习  if练习  switch练习
W1/split_demo/: CMakeLists.txt
W1/split_demo/src/: main.cpp
W2/: README.md
W2/training_pkg/: CMakeLists.txt  package.xml
W2/training_pkg/config/: talker_params.yaml
W2/training_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
W2/training_pkg/install/training_pkg/lib/training_pkg/: add_server  freq_printer  listener  talker
W2/training_pkg/install/training_pkg/share/ament_index/resource_index/parent_prefix_path/: training_pkg
W2/training_pkg/install/training_pkg/share/training_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
W2/training_pkg/install/training_pkg/share/training_pkg/cmake/: training_pkgConfig.cmake
W2/training_pkg/install/training_pkg/share/training_pkg/launch/: talker_listener.launch.py
W2/training_pkg/launch/: talker_listener.launch.py
W2/training_pkg/log/: latest_build
W2/training_pkg/src/: add_server.cpp  freq_printer.cpp  listener.cpp  talker.cpp
W3/: README.md
W3/armor_detector/: CMakeLists.txt  armor_detector  armor_detector.cpp
W3/armor_detector/app/: image_demo.cpp  video_demo.cpp
W3/armor_detector/backup_20260525/: CMakeLists.txt
W3/armor_detector/backup_20260525/app/: image_demo.cpp  video_demo.cpp
W3/armor_detector/backup_20260525/include/: armor_detector.h
W3/armor_detector/backup_20260525/src/: armor_detector_lib.cpp
W3/armor_detector/include/: armor_detector.h
W3/armor_detector/src/: armor_detector.cpp  armor_detector_lib.cpp  video_processor.cpp
W3/armor_detector_backup/:  CMakeLists.txt  armor_detector  armor_detector.cpp
W3/armor_detector_backup/ include/: armor_detector.h
W3/armor_detector_backup/app/: image_demo.cpp  video_demo.cpp
W3/armor_detector_backup/src/: armor_detector_lib.cpp
W7/: 答辩准备-完整问题与解决方案.md  答辩稿-完整版.md  答辩稿.md  项目文件详解.md
project/armor_detector/: .gitkeep  CMakeLists.txt  README.md  package.xml
project/armor_detector/config/: armor_params.yaml
project/armor_detector/include/armor_detector/: armor_detector.hpp  digit_classifier.hpp
project/armor_detector/launch/: armor.launch.py
project/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  digit_classifier.cpp
project/mindvision_camera/: CMakeLists.txt  package.xml
project/mindvision_camera/src/: mindvision_camera_node.cpp
